<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clear_sky"
    tools:context=".MainActivity">

    <!--    <ImageButton-->
    <!--        android:id="@+id/imageButtonSearch"-->
    <!--        android:layout_width="50dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/textViewUnidades"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.411"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/editTextPlaceSearch"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.807"-->
    <!--        app:srcCompat="@android:drawable/ic_menu_search" />-->

    <TextView
        android:id="@+id/textViewTemperaturaMain"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:alpha="0.95"
        android:background="@drawable/rounded_icon"
        android:fontFamily="sans-serif-condensed-medium"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/temperatura"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/textViewFechaSistema"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:alpha="0.95"
        android:background="@drawable/rounded_icon"
        android:fontFamily="sans-serif-condensed-medium"
        android:foregroundGravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="1dp"
        android:text="@string/fecha"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTemperaturaMain"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panelBusqueda"
        app:layout_constraintVertical_bias="0.231" />

    <HorizontalScrollView
        android:id="@+id/panelDatosSemana"
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="40dp"
        android:alpha="0.9"
        android:background="@drawable/rounded"
        android:foregroundGravity="center"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/navigation_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayoutDays"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foregroundGravity="center_vertical"
            app:rowCount="1" />
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/panelDatosGenerales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panelBusqueda"
        app:layout_constraintVertical_bias="0.671">

        <ImageView
            android:id="@+id/iconWeatherCondition"
            android:layout_width="131dp"
            android:layout_height="114dp"
            android:alpha="0.95"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/black"
            android:clickable="false"
            android:contentDescription="@string/iconDescrip" />

        <TextView
            android:id="@+id/textViewDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.95"
            android:background="@drawable/rounded_icon"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/clima"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/panelDatosGenerales"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toTopOf="@+id/panelDatosSemana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperaturaMain"
        app:layout_constraintVertical_bias="0.808">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/datosGeneralesIzda"
                android:layout_width="189dp"
                android:layout_height="79dp"
                android:clickable="false"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="1dp"
                android:text="@string/datos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/datosGeneralesDcha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:gravity="center"
                android:paddingStart="1dp"
                android:paddingEnd="16dp"
                android:text="@string/datos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:itemBackground="@color/black"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

    <HorizontalScrollView
        android:id="@+id/panelBusqueda"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_icon"
        app:layout_constraintBottom_toTopOf="@+id/panelUnidades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:alpha="0.9"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextPlaceSearch"
                android:layout_width="259dp"
                android:layout_height="match_parent"
                android:alpha="0.95"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:foregroundGravity="center_vertical"
                android:hint="@string/textoBuscarHint"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingEnd="1dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/botonEscuchar"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/microfono"
                android:src="@android:drawable/ic_btn_speak_now"
                app:layout_constraintBottom_toBottomOf="@+id/texto"
                app:layout_constraintLeft_toRightOf="@+id/texto"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/addFav"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:background="@drawable/ic_favorite_border_24"
                android:backgroundTint="@color/turquoise"
                android:contentDescription="@string/addDescrip"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/panelUnidades"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:background="@drawable/rounded_icon"
        app:layout_constraintBottom_toTopOf="@+id/botonCamara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerUnits"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.95"
                android:backgroundTint="@color/turquoise"
                android:fontFamily="sans-serif-condensed-medium"
                android:foregroundGravity="center_vertical"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/botonCamara"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_icon"
        android:foreground="@drawable/ic_video_camera_back_24"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347"
        tools:ignore="SpeakableTextPresentCheck"
        tools:targetApi="m" />

</androidx.constraintlayout.widget.ConstraintLayout>