...
    <string name="title_notifications">Notifications</string>
    <string name="favDescrip">Acceder al panel de favoritos</string>
    <string name="addDescrip">Add el lugar a favoritos</string>
    <string name="iconDescrip">Icono de la condición del tiempo</string>

    <string name="home">Home</string>
    <string name="favourites">Favoritos</string>
    <string name="map">Mapa meteorologico</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="estado">Condicion metereologica:</string>

    <string-array name="layers">
...
